--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,4 @@
 #For how it is generated, see `hack/generate-authors.sh`.
 
 Robert Okoba <okobarobert7@gmail.com>
-Rose Ndinda <>
+Rose Ndinda <rndinda73@gmail.com>
